package pt.ipp.isep.dei.domain.Train;

/**
 * Enum representing the different types of fuel that can be used by a train.
 */
public enum FuelType {

    /**
     * Steam fuel type.
     */
    STEAM,

    /**
     * Diesel fuel type.
     */
    DIESEL,

    /**
     * Electricity fuel type.
     */
    ELECTRICITY
}